// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion rendering renders an item with interactive content 1`] = `
<div
  className="css-15twc3j"
  data-cy="accordion"
>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-1nin987"
      data-cy="accordionItemTitle accordionItemTitle.danger"
    >
      <button
        aria-controls="customId-content"
        aria-expanded={false}
        className="css-odh0fh"
        data-cy="accordionItemTitle-button"
        onClick={[Function]}
        type="button"
      >
        <div
          tabIndex={-1}
        />
      </button>
      <span
        className="css-1nhhn1w"
        data-cy="accordionItemTitleInner"
      >
        <span
          className="css-1321nl5"
        >
          <svg
            aria-label="system-triangle-right icon"
            className="css-jbdp75"
            data-cy="icon"
            height={16}
            preserveAspectRatio="xMinYMin meet"
            role="img"
            viewBox="0 0 16 16"
            width={16}
          >
            <use
              xlinkHref="#system-triangle-right"
            />
          </svg>
        </span>
        <span
          className="css-bleycz"
        >
          <h3
            className="css-fmvpil"
            data-cy="accordionItemTitle-heading"
            id="customId-heading"
          >
            Panel 1
          </h3>
          <button
            id="interaction"
          >
            test
          </button>
        </span>
      </span>
    </div>
    <div
      aria-labelledby="customId-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="customId-content"
    >
      Content 1
    </div>
  </div>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-1nin987"
      data-cy="accordionItemTitle accordionItemTitle.danger"
    >
      <button
        aria-controls="accordionItem-3-content"
        aria-expanded={false}
        className="css-odh0fh"
        data-cy="accordionItemTitle-button"
        onClick={[Function]}
        type="button"
      >
        <div
          tabIndex={-1}
        />
      </button>
      <span
        className="css-1nhhn1w"
        data-cy="accordionItemTitleInner"
      >
        <span
          className="css-1321nl5"
        >
          <svg
            aria-label="system-triangle-right icon"
            className="css-jbdp75"
            data-cy="icon"
            height={16}
            preserveAspectRatio="xMinYMin meet"
            role="img"
            viewBox="0 0 16 16"
            width={16}
          >
            <use
              xlinkHref="#system-triangle-right"
            />
          </svg>
        </span>
        <span
          className="css-bleycz"
        >
          <h3
            id="accordionItem-3-heading"
          >
            Panel 1
          </h3>
          <button
            id="interaction"
          >
            test
          </button>
          <button
            aria-controls="accordionItem-3-content"
            aria-expanded={false}
            id="toggle"
            onClick={[Function]}
          >
            toggle
          </button>
        </span>
      </span>
    </div>
    <div
      aria-labelledby="accordionItem-3-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="accordionItem-3-content"
    >
      Content 2
    </div>
  </div>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-cf9h7f"
      data-cy="accordionItemTitle accordionItemTitle.disabled"
    >
      <button
        aria-controls="accordionItem-4-content"
        aria-expanded={false}
        className="css-1tjctub"
        data-cy="accordionItemTitle-button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          tabIndex={-1}
        />
      </button>
      <span
        className="css-1nhhn1w"
        data-cy="accordionItemTitleInner"
      >
        <span
          className="css-1321nl5"
        >
          <svg
            aria-label="system-triangle-right icon"
            className="css-jbdp75"
            data-cy="icon"
            height={16}
            preserveAspectRatio="xMinYMin meet"
            role="img"
            viewBox="0 0 16 16"
            width={16}
          >
            <use
              xlinkHref="#system-triangle-right"
            />
          </svg>
        </span>
        <span
          className="css-bleycz"
        >
          <h3
            className="css-fmvpil"
            data-cy="accordionItemTitle-heading"
            id="accordionItem-4-heading"
          >
            Panel 1
          </h3>
          <button
            id="interaction"
          >
            test
          </button>
        </span>
      </span>
    </div>
    <div
      aria-labelledby="accordionItem-4-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="accordionItem-4-content"
    >
      Content 1
    </div>
  </div>
</div>
`;

exports[`Accordion rendering renders with expanded items 1`] = `
<div
  className="css-15twc3j"
  data-cy="accordion"
>
  <div
    data-cy="accordionItem accordionItem.expanded"
  >
    <div
      className="css-duvnlo"
      data-cy="accordionItemTitle"
    >
      <h3
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="panel1-heading"
      >
        <button
          aria-controls="panel1-content"
          aria-expanded="false"
          className="css-1gh59q1"
          data-cy="accordionItemTitle-button"
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-down icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-down"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 1
              </span>
            </span>
          </div>
        </button>
      </h3>
    </div>
    <div
      aria-labelledby="panel1-heading"
      className="css-72kisv"
      data-cy="accordionItemContent"
      hidden={false}
      id="panel1-content"
    >
      Content 1
    </div>
  </div>
  <div
    data-cy="accordionItem accordionItem.expanded"
  >
    <div
      className="css-duvnlo"
      data-cy="accordionItemTitle"
    >
      <h3
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="panel2-heading"
      >
        <button
          aria-controls="panel2-content"
          aria-expanded="false"
          className="css-1gh59q1"
          data-cy="accordionItemTitle-button"
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-down icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-down"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 2
              </span>
            </span>
          </div>
        </button>
      </h3>
    </div>
    <div
      aria-labelledby="panel2-heading"
      className="css-72kisv"
      data-cy="accordionItemContent"
      hidden={false}
      id="panel2-content"
    >
      Content 2
    </div>
  </div>
  <div
    data-cy="accordionItem accordionItem.expanded"
  >
    <div
      className="css-duvnlo"
      data-cy="accordionItemTitle"
    >
      <h3
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="panel3-heading"
      >
        <button
          aria-controls="panel3-content"
          aria-expanded="false"
          className="css-1gh59q1"
          data-cy="accordionItemTitle-button"
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-down icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-down"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 3
              </span>
            </span>
          </div>
        </button>
      </h3>
    </div>
    <div
      aria-labelledby="panel3-heading"
      className="css-72kisv"
      data-cy="accordionItemContent"
      hidden={false}
      id="panel3-content"
    >
      Content 3
    </div>
  </div>
</div>
`;

exports[`Accordion rendering renders with no expanded items 1`] = `
<div
  className="css-15twc3j"
  data-cy="accordion"
>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-1nin987"
      data-cy="accordionItemTitle accordionItemTitle.danger"
    >
      <h3
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="customId-heading"
      >
        <button
          aria-controls="customId-content"
          aria-expanded="false"
          className="css-1gh59q1"
          data-cy="accordionItemTitle-button"
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-right icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-right"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 1
              </span>
            </span>
          </div>
        </button>
      </h3>
    </div>
    <div
      aria-labelledby="customId-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="customId-content"
    >
      Content 1
    </div>
  </div>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-cf9h7f"
      data-cy="accordionItemTitle accordionItemTitle.disabled"
    >
      <h3
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="accordionItem-1-heading"
      >
        <button
          aria-controls="accordionItem-1-content"
          aria-expanded="false"
          className="css-1l66126"
          data-cy="accordionItemTitle-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-right icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-right"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 2
              </span>
            </span>
          </div>
        </button>
      </h3>
    </div>
    <div
      aria-labelledby="accordionItem-1-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="accordionItem-1-content"
    >
      Content 2
    </div>
  </div>
  <div
    data-cy="accordionItem"
  >
    <div
      className="css-1uett59"
      data-cy="accordionItemTitle"
    >
      <h2
        className="css-fmvpil"
        data-cy="accordionItemTitle-heading"
        id="accordionItem-2-heading"
      >
        <button
          aria-controls="accordionItem-2-content"
          aria-expanded="false"
          className="css-1gh59q1"
          data-cy="accordionItemTitle-button"
          onClick={[Function]}
          type="button"
        >
          <div
            tabIndex={-1}
          >
            <span
              className="css-13atth2"
              data-cy="accordionItemTitleInner"
            >
              <span
                className="css-1321nl5"
              >
                <svg
                  aria-label="system-triangle-right icon"
                  className="css-jbdp75"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-triangle-right"
                  />
                </svg>
              </span>
              <span
                className="css-bleycz"
              >
                Panel 3
              </span>
            </span>
          </div>
        </button>
      </h2>
    </div>
    <div
      aria-labelledby="accordionItem-2-heading"
      className="css-13hugf8"
      data-cy="accordionItemContent"
      hidden={true}
      id="accordionItem-2-content"
    >
      Content 3
    </div>
  </div>
</div>
`;
